--- a/package/crds/accesscontextmanager.gcp.upbound.io_serviceperimeters.yaml
+++ b/package/crds/accesscontextmanager.gcp.upbound.io_serviceperimeters.yaml
@@ -3190,7 +3190,10 @@ spec:
                                         description: |-
                                           A Google Cloud resource that is allowed to ingress the perimeter.
                                           Requests from these resources will be allowed to access perimeter data.
-                                          Currently only projects are allowed. Format projects/{project_number}
+                                          Currently only projects and VPCs are allowed.
+                                          Project format: projects/{projectNumber}
+                                          VPC network format:
+                                          //compute.googleapis.com/projects/{PROJECT_ID}/global/networks/{NAME}.
                                           The project may be in any Google Cloud organization, not just the
                                           organization that the perimeter is defined in. * is not allowed, the case
                                           of allowing all Google Cloud resources only is not supported.
@@ -3642,7 +3645,10 @@ spec:
                                         description: |-
                                           A Google Cloud resource that is allowed to ingress the perimeter.
                                           Requests from these resources will be allowed to access perimeter data.
-                                          Currently only projects are allowed. Format projects/{project_number}
+                                          Currently only projects and VPCs are allowed.
+                                          Project format: projects/{projectNumber}
+                                          VPC network format:
+                                          //compute.googleapis.com/projects/{PROJECT_ID}/global/networks/{NAME}.
                                           The project may be in any Google Cloud organization, not just the
                                           organization that the perimeter is defined in. * is not allowed, the case
                                           of allowing all Google Cloud resources only is not supported.
@@ -4083,7 +4089,10 @@ spec:
                                         description: |-
                                           A Google Cloud resource that is allowed to ingress the perimeter.
                                           Requests from these resources will be allowed to access perimeter data.
-                                          Currently only projects are allowed. Format projects/{project_number}
+                                          Currently only projects and VPCs are allowed.
+                                          Project format: projects/{projectNumber}
+                                          VPC network format:
+                                          //compute.googleapis.com/projects/{PROJECT_ID}/global/networks/{NAME}.
                                           The project may be in any Google Cloud organization, not just the
                                           organization that the perimeter is defined in. * is not allowed, the case
                                           of allowing all Google Cloud resources only is not supported.
@@ -4535,7 +4544,10 @@ spec:
                                         description: |-
                                           A Google Cloud resource that is allowed to ingress the perimeter.
                                           Requests from these resources will be allowed to access perimeter data.
-                                          Currently only projects are allowed. Format projects/{project_number}
+                                          Currently only projects and VPCs are allowed.
+                                          Project format: projects/{projectNumber}
+                                          VPC network format:
+                                          //compute.googleapis.com/projects/{PROJECT_ID}/global/networks/{NAME}.
                                           The project may be in any Google Cloud organization, not just the
                                           organization that the perimeter is defined in. * is not allowed, the case
                                           of allowing all Google Cloud resources only is not supported.
@@ -5075,7 +5087,10 @@ spec:
                                         description: |-
                                           A Google Cloud resource that is allowed to ingress the perimeter.
                                           Requests from these resources will be allowed to access perimeter data.
-                                          Currently only projects are allowed. Format projects/{project_number}
+                                          Currently only projects and VPCs are allowed.
+                                          Project format: projects/{projectNumber}
+                                          VPC network format:
+                                          //compute.googleapis.com/projects/{PROJECT_ID}/global/networks/{NAME}.
                                           The project may be in any Google Cloud organization, not just the
                                           organization that the perimeter is defined in. * is not allowed, the case
                                           of allowing all Google Cloud resources only is not supported.
@@ -5372,7 +5387,10 @@ spec:
                                         description: |-
                                           A Google Cloud resource that is allowed to ingress the perimeter.
                                           Requests from these resources will be allowed to access perimeter data.
-                                          Currently only projects are allowed. Format projects/{project_number}
+                                          Currently only projects and VPCs are allowed.
+                                          Project format: projects/{projectNumber}
+                                          VPC network format:
+                                          //compute.googleapis.com/projects/{PROJECT_ID}/global/networks/{NAME}.
                                           The project may be in any Google Cloud organization, not just the
                                           organization that the perimeter is defined in. * is not allowed, the case
                                           of allowing all Google Cloud resources only is not supported.
