--- a/package/crds/compute.gcp.upbound.io_regiontargethttpsproxies.yaml
+++ b/package/crds/compute.gcp.upbound.io_regiontargethttpsproxies.yaml
@@ -106,6 +106,10 @@ spec:
                       INTERNAL_SELF_MANAGED and which with EXTERNAL, EXTERNAL_MANAGED
                       loadBalancingScheme consult ServerTlsPolicy documentation.
                       If left blank, communications are not encrypted.
+                      If you remove this field from your configuration at the same time as
+                      deleting or recreating a referenced ServerTlsPolicy resource, you will
+                      receive a resourceInUseByAnotherResource error. Use lifecycle.create_before_destroy
+                      within the ServerTlsPolicy resource to avoid this.
                     type: string
                   sslCertificates:
                     description: |-
@@ -324,6 +328,10 @@ spec:
                       INTERNAL_SELF_MANAGED and which with EXTERNAL, EXTERNAL_MANAGED
                       loadBalancingScheme consult ServerTlsPolicy documentation.
                       If left blank, communications are not encrypted.
+                      If you remove this field from your configuration at the same time as
+                      deleting or recreating a referenced ServerTlsPolicy resource, you will
+                      receive a resourceInUseByAnotherResource error. Use lifecycle.create_before_destroy
+                      within the ServerTlsPolicy resource to avoid this.
                     type: string
                   sslCertificates:
                     description: |-
@@ -717,6 +725,10 @@ spec:
                       INTERNAL_SELF_MANAGED and which with EXTERNAL, EXTERNAL_MANAGED
                       loadBalancingScheme consult ServerTlsPolicy documentation.
                       If left blank, communications are not encrypted.
+                      If you remove this field from your configuration at the same time as
+                      deleting or recreating a referenced ServerTlsPolicy resource, you will
+                      receive a resourceInUseByAnotherResource error. Use lifecycle.create_before_destroy
+                      within the ServerTlsPolicy resource to avoid this.
                     type: string
                   sslCertificates:
                     description: |-
