--- a/package/crds/cloudplatform.gcp.upbound.io_projects.yaml
+++ b/package/crds/cloudplatform.gcp.upbound.io_projects.yaml
@@ -88,6 +88,11 @@ spec:
                       See Google Cloud Billing API Access Control
                       for more details.
                     type: string
+                  deletionPolicy:
+                    description: |-
+                      The deletion policy for the Project. Setting ABANDON allows the resource
+                      to be abandoned rather than deleted, i.e. Possible values are: "PREVENT", "ABANDON", "DELETE". Default value is DELETE.
+                    type: string
                   folderId:
                     description: |-
                       The numeric ID of the folder this project should be
@@ -199,6 +204,11 @@ spec:
                       to be created.
                     type: string
                   skipDelete:
+                    description: |-
+                      skip_delete is deprecated and will be
+                      removed in 6.0.0. Please use deletion_policy instead. A skip_delete value of false
+                      can be changed to a deletion_policy value of DELETE and a skip_delete value of true
+                      to a deletion_policy value of ABANDON for equivalent behavior.
                     type: boolean
                 type: object
               initProvider:
@@ -229,6 +239,11 @@ spec:
                       See Google Cloud Billing API Access Control
                       for more details.
                     type: string
+                  deletionPolicy:
+                    description: |-
+                      The deletion policy for the Project. Setting ABANDON allows the resource
+                      to be abandoned rather than deleted, i.e. Possible values are: "PREVENT", "ABANDON", "DELETE". Default value is DELETE.
+                    type: string
                   folderId:
                     description: |-
                       The numeric ID of the folder this project should be
@@ -340,6 +355,11 @@ spec:
                       to be created.
                     type: string
                   skipDelete:
+                    description: |-
+                      skip_delete is deprecated and will be
+                      removed in 6.0.0. Please use deletion_policy instead. A skip_delete value of false
+                      can be changed to a deletion_policy value of DELETE and a skip_delete value of true
+                      to a deletion_policy value of ABANDON for equivalent behavior.
                     type: boolean
                 type: object
               managementPolicies:
@@ -538,6 +558,11 @@ spec:
                       See Google Cloud Billing API Access Control
                       for more details.
                     type: string
+                  deletionPolicy:
+                    description: |-
+                      The deletion policy for the Project. Setting ABANDON allows the resource
+                      to be abandoned rather than deleted, i.e. Possible values are: "PREVENT", "ABANDON", "DELETE". Default value is DELETE.
+                    type: string
                   effectiveLabels:
                     additionalProperties:
                       type: string
@@ -584,6 +609,11 @@ spec:
                       to be created.
                     type: string
                   skipDelete:
+                    description: |-
+                      skip_delete is deprecated and will be
+                      removed in 6.0.0. Please use deletion_policy instead. A skip_delete value of false
+                      can be changed to a deletion_policy value of DELETE and a skip_delete value of true
+                      to a deletion_policy value of ABANDON for equivalent behavior.
                     type: boolean
                   terraformLabels:
                     additionalProperties:
