--- a/package/crds/cloudrun.gcp.upbound.io_v2jobs.yaml
+++ b/package/crds/cloudrun.gcp.upbound.io_v2jobs.yaml
@@ -2177,6 +2177,10 @@ spec:
                           this justification. If useDefault is False, then it must
                           be empty. For more information on breakglass, see https://cloud.google.com/binary-authorization/docs/using-breakglass
                         type: string
+                      policy:
+                        description: 'The path to a binary authorization policy. Format:
+                          projects/{project}/platforms/cloudRun/{policy-name}'
+                        type: string
                       useDefault:
                         description: If True, indicates to use the default project's
                           binary authorization policy. If False, binary authorization
@@ -2741,6 +2745,10 @@ spec:
                         description: If present, indicates to use Breakglass using
                           this justification. If useDefault is False, then it must
                           be empty. For more information on breakglass, see https://cloud.google.com/binary-authorization/docs/using-breakglass
+                        type: string
+                      policy:
+                        description: 'The path to a binary authorization policy. Format:
+                          projects/{project}/platforms/cloudRun/{policy-name}'
                         type: string
                       useDefault:
                         description: If True, indicates to use the default project's
@@ -3465,6 +3473,10 @@ spec:
                         description: If present, indicates to use Breakglass using
                           this justification. If useDefault is False, then it must
                           be empty. For more information on breakglass, see https://cloud.google.com/binary-authorization/docs/using-breakglass
+                        type: string
+                      policy:
+                        description: 'The path to a binary authorization policy. Format:
+                          projects/{project}/platforms/cloudRun/{policy-name}'
                         type: string
                       useDefault:
                         description: If True, indicates to use the default project's
