--- a/package/crds/compute.gcp.upbound.io_havpngateways.yaml
+++ b/package/crds/compute.gcp.upbound.io_havpngateways.yaml
@@ -76,6 +76,12 @@ spec:
                   description:
                     description: An optional description of this resource.
                     type: string
+                  gatewayIpVersion:
+                    description: |-
+                      The IP family of the gateway IPs for the HA-VPN gateway interfaces. If not specified, IPV4 will be used.
+                      Default value is IPV4.
+                      Possible values are: IPV4, IPV6.
+                    type: string
                   network:
                     description: The network this VPN gateway is accepting traffic
                       for.
@@ -167,7 +173,7 @@ spec:
                       The stack type for this VPN gateway to identify the IP protocols that are enabled.
                       If not specified, IPV4_ONLY will be used.
                       Default value is IPV4_ONLY.
-                      Possible values are: IPV4_ONLY, IPV4_IPV6.
+                      Possible values are: IPV4_ONLY, IPV4_IPV6, IPV6_ONLY.
                     type: string
                   vpnInterfaces:
                     description: |-
@@ -284,6 +290,12 @@ spec:
                   description:
                     description: An optional description of this resource.
                     type: string
+                  gatewayIpVersion:
+                    description: |-
+                      The IP family of the gateway IPs for the HA-VPN gateway interfaces. If not specified, IPV4 will be used.
+                      Default value is IPV4.
+                      Possible values are: IPV4, IPV6.
+                    type: string
                   network:
                     description: The network this VPN gateway is accepting traffic
                       for.
@@ -372,7 +384,7 @@ spec:
                       The stack type for this VPN gateway to identify the IP protocols that are enabled.
                       If not specified, IPV4_ONLY will be used.
                       Default value is IPV4_ONLY.
-                      Possible values are: IPV4_ONLY, IPV4_IPV6.
+                      Possible values are: IPV4_ONLY, IPV4_IPV6, IPV6_ONLY.
                     type: string
                   vpnInterfaces:
                     description: |-
@@ -646,6 +658,12 @@ spec:
                   description:
                     description: An optional description of this resource.
                     type: string
+                  gatewayIpVersion:
+                    description: |-
+                      The IP family of the gateway IPs for the HA-VPN gateway interfaces. If not specified, IPV4 will be used.
+                      Default value is IPV4.
+                      Possible values are: IPV4, IPV6.
+                    type: string
                   id:
                     description: an identifier for the resource with format projects/{{project}}/regions/{{region}}/vpnGateways/{{name}}
                     type: string
@@ -669,7 +687,7 @@ spec:
                       The stack type for this VPN gateway to identify the IP protocols that are enabled.
                       If not specified, IPV4_ONLY will be used.
                       Default value is IPV4_ONLY.
-                      Possible values are: IPV4_ONLY, IPV4_IPV6.
+                      Possible values are: IPV4_ONLY, IPV4_IPV6, IPV6_ONLY.
                     type: string
                   vpnInterfaces:
                     description: |-
