--- a/package/crds/compute.gcp.upbound.io_instancegroupmanagers.yaml
+++ b/package/crds/compute.gcp.upbound.io_instancegroupmanagers.yaml
@@ -2179,25 +2179,22 @@ spec:
                       official documentation and API.
                     properties:
                       maxSurgeFixed:
-                        description: ', The maximum number of instances that can be
-                          created above the specified targetSize during the update
-                          process. Conflicts with max_surge_percent. If neither is
-                          set, defaults to 1'
+                        description: ', Specifies a fixed number of VM instances.
+                          This must be a positive integer. Conflicts with max_surge_percent.
+                          Both cannot be 0.'
                         type: number
                       maxSurgePercent:
-                        description: ', The maximum number of instances(calculated
-                          as percentage) that can be created above the specified targetSize
-                          during the update process. Conflicts with max_surge_fixed.'
+                        description: ', Specifies a percentage of instances between
+                          0 to 100%, inclusive. For example, specify 80 for 80%. Conflicts
+                          with max_surge_fixed.'
                         type: number
                       maxUnavailableFixed:
-                        description: ', The maximum number of instances that can be
-                          unavailable during the update process. Conflicts with max_unavailable_percent.
-                          If neither is set, defaults to 1'
+                        description: ', Specifies a fixed number of VM instances.
+                          This must be a positive integer.'
                         type: number
                       maxUnavailablePercent:
-                        description: ', The maximum number of instances(calculated
-                          as percentage) that can be unavailable during the update
-                          process. Conflicts with max_unavailable_fixed.'
+                        description: ', Specifies a percentage of instances between
+                          0 to 100%, inclusive. For example, specify 80 for 80%..'
                         type: number
                       minimalAction:
                         description: '- Minimal action to be taken on an instance.
@@ -2718,25 +2715,22 @@ spec:
                       official documentation and API.
                     properties:
                       maxSurgeFixed:
-                        description: ', The maximum number of instances that can be
-                          created above the specified targetSize during the update
-                          process. Conflicts with max_surge_percent. If neither is
-                          set, defaults to 1'
+                        description: ', Specifies a fixed number of VM instances.
+                          This must be a positive integer. Conflicts with max_surge_percent.
+                          Both cannot be 0.'
                         type: number
                       maxSurgePercent:
-                        description: ', The maximum number of instances(calculated
-                          as percentage) that can be created above the specified targetSize
-                          during the update process. Conflicts with max_surge_fixed.'
+                        description: ', Specifies a percentage of instances between
+                          0 to 100%, inclusive. For example, specify 80 for 80%. Conflicts
+                          with max_surge_fixed.'
                         type: number
                       maxUnavailableFixed:
-                        description: ', The maximum number of instances that can be
-                          unavailable during the update process. Conflicts with max_unavailable_percent.
-                          If neither is set, defaults to 1'
+                        description: ', Specifies a fixed number of VM instances.
+                          This must be a positive integer.'
                         type: number
                       maxUnavailablePercent:
-                        description: ', The maximum number of instances(calculated
-                          as percentage) that can be unavailable during the update
-                          process. Conflicts with max_unavailable_fixed.'
+                        description: ', Specifies a percentage of instances between
+                          0 to 100%, inclusive. For example, specify 80 for 80%..'
                         type: number
                       minimalAction:
                         description: '- Minimal action to be taken on an instance.
@@ -3354,25 +3348,22 @@ spec:
                       official documentation and API.
                     properties:
                       maxSurgeFixed:
-                        description: ', The maximum number of instances that can be
-                          created above the specified targetSize during the update
-                          process. Conflicts with max_surge_percent. If neither is
-                          set, defaults to 1'
+                        description: ', Specifies a fixed number of VM instances.
+                          This must be a positive integer. Conflicts with max_surge_percent.
+                          Both cannot be 0.'
                         type: number
                       maxSurgePercent:
-                        description: ', The maximum number of instances(calculated
-                          as percentage) that can be created above the specified targetSize
-                          during the update process. Conflicts with max_surge_fixed.'
+                        description: ', Specifies a percentage of instances between
+                          0 to 100%, inclusive. For example, specify 80 for 80%. Conflicts
+                          with max_surge_fixed.'
                         type: number
                       maxUnavailableFixed:
-                        description: ', The maximum number of instances that can be
-                          unavailable during the update process. Conflicts with max_unavailable_percent.
-                          If neither is set, defaults to 1'
+                        description: ', Specifies a fixed number of VM instances.
+                          This must be a positive integer.'
                         type: number
                       maxUnavailablePercent:
-                        description: ', The maximum number of instances(calculated
-                          as percentage) that can be unavailable during the update
-                          process. Conflicts with max_unavailable_fixed.'
+                        description: ', Specifies a percentage of instances between
+                          0 to 100%, inclusive. For example, specify 80 for 80%..'
                         type: number
                       minimalAction:
                         description: '- Minimal action to be taken on an instance.
