--- a/package/crds/compute.gcp.upbound.io_regioninstancegroupmanagers.yaml
+++ b/package/crds/compute.gcp.upbound.io_regioninstancegroupmanagers.yaml
@@ -2328,33 +2328,22 @@ spec:
                           region. If NONE, proactive redistribution is disabled.'
                         type: string
                       maxSurgeFixed:
-                        description: ', The maximum number of instances that can be
-                          created above the specified targetSize during the update
-                          process. Conflicts with max_surge_percent. It has to be
-                          either 0 or at least equal to the number of zones.  If fixed
-                          values are used, at least one of max_unavailable_fixed or
-                          max_surge_fixed must be greater than 0.'
+                        description: ', Specifies a fixed number of VM instances.
+                          This must be a positive integer. Conflicts with max_surge_percent.
+                          Both cannot be 0.'
                         type: number
                       maxSurgePercent:
-                        description: ', The maximum number of instances(calculated
-                          as percentage) that can be created above the specified targetSize
-                          during the update process. Conflicts with max_surge_fixed.
-                          Percent value is only allowed for regional managed instance
-                          groups with size at least 10.'
+                        description: ', Specifies a percentage of instances between
+                          0 to 100%, inclusive. For example, specify 80 for 80%. Conflicts
+                          with max_surge_fixed.'
                         type: number
                       maxUnavailableFixed:
-                        description: ', The maximum number of instances that can be
-                          unavailable during the update process. Conflicts with max_unavailable_percent.
-                          It has to be either 0 or at least equal to the number of
-                          zones. If fixed values are used, at least one of max_unavailable_fixed
-                          or max_surge_fixed must be greater than 0.'
+                        description: ', Specifies a fixed number of VM instances.
+                          This must be a positive integer.'
                         type: number
                       maxUnavailablePercent:
-                        description: ', The maximum number of instances(calculated
-                          as percentage) that can be unavailable during the update
-                          process. Conflicts with max_unavailable_fixed. Percent value
-                          is only allowed for regional managed instance groups with
-                          size at least 10.'
+                        description: ', Specifies a percentage of instances between
+                          0 to 100%, inclusive. For example, specify 80 for 80%..'
                         type: number
                       minimalAction:
                         description: '- Minimal action to be taken on an instance.
@@ -2900,33 +2889,22 @@ spec:
                           region. If NONE, proactive redistribution is disabled.'
                         type: string
                       maxSurgeFixed:
-                        description: ', The maximum number of instances that can be
-                          created above the specified targetSize during the update
-                          process. Conflicts with max_surge_percent. It has to be
-                          either 0 or at least equal to the number of zones.  If fixed
-                          values are used, at least one of max_unavailable_fixed or
-                          max_surge_fixed must be greater than 0.'
+                        description: ', Specifies a fixed number of VM instances.
+                          This must be a positive integer. Conflicts with max_surge_percent.
+                          Both cannot be 0.'
                         type: number
                       maxSurgePercent:
-                        description: ', The maximum number of instances(calculated
-                          as percentage) that can be created above the specified targetSize
-                          during the update process. Conflicts with max_surge_fixed.
-                          Percent value is only allowed for regional managed instance
-                          groups with size at least 10.'
+                        description: ', Specifies a percentage of instances between
+                          0 to 100%, inclusive. For example, specify 80 for 80%. Conflicts
+                          with max_surge_fixed.'
                         type: number
                       maxUnavailableFixed:
-                        description: ', The maximum number of instances that can be
-                          unavailable during the update process. Conflicts with max_unavailable_percent.
-                          It has to be either 0 or at least equal to the number of
-                          zones. If fixed values are used, at least one of max_unavailable_fixed
-                          or max_surge_fixed must be greater than 0.'
+                        description: ', Specifies a fixed number of VM instances.
+                          This must be a positive integer.'
                         type: number
                       maxUnavailablePercent:
-                        description: ', The maximum number of instances(calculated
-                          as percentage) that can be unavailable during the update
-                          process. Conflicts with max_unavailable_fixed. Percent value
-                          is only allowed for regional managed instance groups with
-                          size at least 10.'
+                        description: ', Specifies a percentage of instances between
+                          0 to 100%, inclusive. For example, specify 80 for 80%..'
                         type: number
                       minimalAction:
                         description: '- Minimal action to be taken on an instance.
@@ -3581,33 +3559,22 @@ spec:
                           region. If NONE, proactive redistribution is disabled.'
                         type: string
                       maxSurgeFixed:
-                        description: ', The maximum number of instances that can be
-                          created above the specified targetSize during the update
-                          process. Conflicts with max_surge_percent. It has to be
-                          either 0 or at least equal to the number of zones.  If fixed
-                          values are used, at least one of max_unavailable_fixed or
-                          max_surge_fixed must be greater than 0.'
+                        description: ', Specifies a fixed number of VM instances.
+                          This must be a positive integer. Conflicts with max_surge_percent.
+                          Both cannot be 0.'
                         type: number
                       maxSurgePercent:
-                        description: ', The maximum number of instances(calculated
-                          as percentage) that can be created above the specified targetSize
-                          during the update process. Conflicts with max_surge_fixed.
-                          Percent value is only allowed for regional managed instance
-                          groups with size at least 10.'
+                        description: ', Specifies a percentage of instances between
+                          0 to 100%, inclusive. For example, specify 80 for 80%. Conflicts
+                          with max_surge_fixed.'
                         type: number
                       maxUnavailableFixed:
-                        description: ', The maximum number of instances that can be
-                          unavailable during the update process. Conflicts with max_unavailable_percent.
-                          It has to be either 0 or at least equal to the number of
-                          zones. If fixed values are used, at least one of max_unavailable_fixed
-                          or max_surge_fixed must be greater than 0.'
+                        description: ', Specifies a fixed number of VM instances.
+                          This must be a positive integer.'
                         type: number
                       maxUnavailablePercent:
-                        description: ', The maximum number of instances(calculated
-                          as percentage) that can be unavailable during the update
-                          process. Conflicts with max_unavailable_fixed. Percent value
-                          is only allowed for regional managed instance groups with
-                          size at least 10.'
+                        description: ', Specifies a percentage of instances between
+                          0 to 100%, inclusive. For example, specify 80 for 80%..'
                         type: number
                       minimalAction:
                         description: '- Minimal action to be taken on an instance.
