--- a/package/crds/accesscontextmanager.gcp.upbound.io_serviceperimeterdryrunresources.yaml
+++ b/package/crds/accesscontextmanager.gcp.upbound.io_serviceperimeterdryrunresources.yaml
@@ -36,6 +36,7 @@ spec:
       openAPIV3Schema:
         description: ServicePerimeterDryRunResource is the Schema for the ServicePerimeterDryRunResources
           API. Allows configuring a single GCP resource that should be inside of the
+          'spec' block of a dry run service perimeter.
         properties:
           apiVersion:
             description: |-
