--- a/examples/accesscontextmanager/v1beta1/serviceperimeterdryrunresource.yaml
+++ b/examples/accesscontextmanager/v1beta1/serviceperimeterdryrunresource.yaml
@@ -7,6 +7,7 @@ kind: ServicePerimeterDryRunResource
 metadata:
   annotations:
     meta.upbound.io/example-id: accesscontextmanager/v1beta1/serviceperimeterdryrunresource
+    upjet.upbound.io/manual-intervention: "Requires organization level IAM permissions"
   labels:
     testing.upbound.io/example-name: service-perimeter-dry-run-resource
   name: service-perimeter-dry-run-resource
@@ -23,6 +24,7 @@ kind: AccessPolicy
 metadata:
   annotations:
     meta.upbound.io/example-id: accesscontextmanager/v1beta1/serviceperimeterdryrunresource
+    upjet.upbound.io/manual-intervention: "Requires organization level IAM permissions"
   labels:
     testing.upbound.io/example-name: access-policy
   name: access-policy
@@ -37,6 +39,7 @@ kind: ServicePerimeter
 metadata:
   annotations:
     meta.upbound.io/example-id: accesscontextmanager/v1beta1/serviceperimeterdryrunresource
+    upjet.upbound.io/manual-intervention: "Requires organization level IAM permissions"
   labels:
     testing.upbound.io/example-name: service-perimeter-dry-run-resource
   name: service-perimeter-dry-run-resource
