--- a/package/crds/accesscontextmanager.gcp.upbound.io_serviceperimeteregresspolicies.yaml
+++ b/package/crds/accesscontextmanager.gcp.upbound.io_serviceperimeteregresspolicies.yaml
@@ -35,7 +35,7 @@ spec:
     schema:
       openAPIV3Schema:
         description: ServicePerimeterEgressPolicy is the Schema for the ServicePerimeterEgressPolicys
-          API. Manage a single EgressPolicy in the status (enforced) configuration
+          API. Manage a single EgressPolicy in the 'status' (enforced) configuration
           for a service perimeter.
         properties:
           apiVersion:
@@ -468,6 +468,14 @@ spec:
             - forProvider
             type: object
             x-kubernetes-validations:
+            - message: spec.forProvider.egressFrom is a required parameter
+              rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
+                || ''Update'' in self.managementPolicies) || has(self.forProvider.egressFrom)
+                || (has(self.initProvider) && has(self.initProvider.egressFrom))'
+            - message: spec.forProvider.egressTo is a required parameter
+              rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
+                || ''Update'' in self.managementPolicies) || has(self.forProvider.egressTo)
+                || (has(self.initProvider) && has(self.initProvider.egressTo))'
             - message: spec.forProvider.perimeter is a required parameter
               rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
                 || ''Update'' in self.managementPolicies) || has(self.forProvider.perimeter)
