--- a/package/crds/accesscontextmanager.gcp.upbound.io_serviceperimeteringresspolicies.yaml
+++ b/package/crds/accesscontextmanager.gcp.upbound.io_serviceperimeteringresspolicies.yaml
@@ -35,7 +35,7 @@ spec:
     schema:
       openAPIV3Schema:
         description: ServicePerimeterIngressPolicy is the Schema for the ServicePerimeterIngressPolicys
-          API. Manage a single IngressPolicy in the status (enforced) configuration
+          API. Manage a single IngressPolicy in the 'status' (enforced) configuration
           for a service perimeter.
         properties:
           apiVersion:
@@ -486,6 +486,14 @@ spec:
             - forProvider
             type: object
             x-kubernetes-validations:
+            - message: spec.forProvider.ingressFrom is a required parameter
+              rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
+                || ''Update'' in self.managementPolicies) || has(self.forProvider.ingressFrom)
+                || (has(self.initProvider) && has(self.initProvider.ingressFrom))'
+            - message: spec.forProvider.ingressTo is a required parameter
+              rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
+                || ''Update'' in self.managementPolicies) || has(self.forProvider.ingressTo)
+                || (has(self.initProvider) && has(self.initProvider.ingressTo))'
             - message: spec.forProvider.perimeter is a required parameter
               rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
                 || ''Update'' in self.managementPolicies) || has(self.forProvider.perimeter)
