Fixed serviceconnectionpolicy example
Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>

--- a/examples/networkconnectivity/v1beta1/serviceconnectionpolicy.yaml
+++ b/examples/networkconnectivity/v1beta1/serviceconnectionpolicy.yaml
@@ -14,7 +14,7 @@ spec:
       matchLabels:
         testing.upbound.io/example-name: producer_net
     pscConfig:
-    - limit: 2
+      limit: "2"
       subnetworksRefs:
       - name: producer_subnet
     serviceClass: gcp-memorystore-redis
