Fixed subnetworkRef name in example
Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>
Signed-off-by: nilan3 <nilanthanb1994@gmail.com>

--- a/examples/networkconnectivity/v1beta1/serviceconnectionpolicy.yaml
+++ b/examples/networkconnectivity/v1beta1/serviceconnectionpolicy.yaml
@@ -16,7 +16,7 @@ spec:
     pscConfig:
       limit: "2"
       subnetworksRefs:
-      - name: producer_subnet
+      - name: producer-subnet
     serviceClass: gcp-memorystore-redis
 
 ---
