--- a/examples/certificatemanager/v1beta2/certificate.yaml
+++ b/examples/certificatemanager/v1beta2/certificate.yaml
@@ -18,7 +18,7 @@ spec:
     labels:
       env: test
     managed:
-    - dnsAuthorizationsRefs:
+      dnsAuthorizationsRefs:
       - name: instance
       - name: instance2
       domainsRefs:
