Increase timeout to 30 min
Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>
Signed-off-by: nilan3 <nilanthanb1994@gmail.com>

--- a/examples/redis/v1beta1/cluster.yaml
+++ b/examples/redis/v1beta1/cluster.yaml
@@ -3,6 +3,7 @@ kind: Cluster
 metadata:
   annotations:
     meta.upbound.io/example-id: redis/v1beta1/cluster
+    uptest.upbound.io/timeout: "1800"
   labels:
     testing.upbound.io/example-name: cluster-ha
   name: cluster-ha
